@@ -44,8 +44,9 @@ def parse_args():
 
     parser.add_argument('--no-pause', action='store_true', help='Disable the pause at the end')
     parser.add_argument('--modspath', type=str, help='Enter the mods directory (in quotes).')
+    parser.add_argument('--no-json', action='store_true',help='Disable the JSON modlist generation')
     parser.add_argument('--no-pdf', action='store_true', help='Disable the PDF modlist generation')
-    parser.add_argument('--no-json', action='store_true', help='Disable the JSON modlist generation')
+    parser.add_argument('--no-html', action='store_true',help='Disable the HTML modlist generation')
     parser.add_argument('--log-level', choices=['DEBUG', 'INFO', 'WARNING', 'ERROR', 'CRITICAL'], help='Set the logging level')
     parser.add_argument('--max-workers', type=int, help='Set the maximum number of workers for downloads')
     parser.add_argument('--timeout', type=int, help='Set the timeout for downloads')
