@@ -55,6 +55,7 @@
   
     "export_json_modilst": "JSON으로 내보낸 모드 목록: ",
     "export_pdf_modilst": "PDF로 내보낸 모드 목록: ",
+    "export_html_modilst": "모드 목록을 HTML로 내보냈습니다: ",
     "export_pdf_generating_file": "PDF 생성 중...",
     "export_pdf_permission_error": "'{pdf_path}' 파일에 액세스할 수 없습니다. 파일이 열려 있거나 다른 프로세스에서 사용 중일 수 있습니다.\n이 파일을 사용하는 모든 응용 프로그램을 닫고 다시 시도하세요.",
     "export_pdf_installed_mods": "모드 설치함",
