@@ -55,6 +55,7 @@
     
     "export_json_modilst": "Lista de mods exportada como JSON:",
     "export_pdf_modilst": "Lista de mods exportada como PDF:",
+    "export_html_modilst": "Lista de mods exportada para HTML: ",
     "export_pdf_generating_file": "Gerando PDF...",
     "export_pdf_permission_error": "Não é possível acessar o arquivo '{pdf_path}'. O arquivo pode estar aberto ou em uso por outro processo.\nFeche todos os aplicativos que estão usando este arquivo e tente novamente.",
     "export_pdf_installed_mods": "mods instalados",
